# roomkit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LAUNCH_PLAN.md  README.md  pyproject.toml  railway.json  requirements.txt  road_to_production.md
.githooks/: pre-commit
app/: __init__.py  auth.py  deps.py  main.py  rate_limit.py
context/: budget_policies.yaml  category_spec_rules.yaml  freshness_policies.yaml  slot_taxonomy.yaml  sourcing_policies.yaml  style_profiles.yaml
docs/: RoomKit_Founder_Build_Packet_v2.md  deploy_railway.md  product_overview.md  sourcing_strategy.md  system_map.md
evals/: coherence_rubric.md  composition_eval_set.csv
migrations/: 001_tracking_tables.sql  002_designs_table.sql  003_tier_enforcement.sql  004_stripe_payments.sql  005_rls_policies.sql  006_deleted_emails.sql  007_events_nullable_run_id.sql  007_featured_designs.sql
prompts/: interpret_style.md  plan_composition.md  select_products.md
schemas/: __init__.py  click_event.py  design.py  product.py  product_snapshot.py  room_request.py  room_taxonomy.py  slot.py  slot_plan.py  style_profile.py
scripts/: bench_candidate_cap.py  bench_selection.py  build_catalog.py  catalog_expansion_gamer_den.py  catalog_expansion_v3.py  catalog_gap_analysis.py  catalog_gap_v2.py  crawl_pillows.json  crawl_sports_art.json  demo_pipeline.py  demo_real_llm.py  diagnose_underspend.py  generate_quiz_images.py  load_test_6f.py  pull_timing.py  refresh_aesthetics.json  refresh_budget_tier.json  refresh_catalog.py  refresh_elevated_art.json  stripe_rpc_test.py  targeted_fetch.py  (+9 more)
(+225 files in other folders)
